Checkpoint for a bunch of local changes.

--- a/_data/lexicon.yaml
+++ b/_data/lexicon.yaml
@@ -1096,7 +1096,7 @@
   - mhur
   - nžu
   - sur
-  - szū
+  - sū
 - daemonica: kapu
   key: k0a0pu0
   notes: ''
@@ -1293,7 +1293,7 @@
   - ģu
   - nžu
   - sur
-  - szū
+  - sū
 - daemonica: mpšu
   key: mps1u0
   notes: ''
@@ -1421,7 +1421,7 @@
   - ģu
   - mhur
   - sur
-  - szū
+  - sū
 - daemonica: nžur
   key: n0z1u0r
   notes: ''
@@ -2138,9 +2138,9 @@
   - ģu
   - mhur
   - nžu
-  - szū
-- daemonica: szū
-  key: s0z0u1
+  - sū
+- daemonica: sū
+  key: s0u1
   notes: ''
   translations:
   - english: very large or flat shape
@@ -3100,7 +3100,7 @@
   - mhur
   - nžu
   - sur
-  - szū
+  - sū
 - daemonica: yhū
   key: yhu1
   notes: ''
@@ -3115,5 +3115,5 @@
   - mhur
   - nžu
   - sur
-  - szū
+  - sū
 
