Various cleanups; added UDHR and Tower of Babel sample texts.

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,9 @@ collections:
       - conventional.md
       - morphology.md
       - numbers.md
+  texts:
+    output: true
+    permalink: /:collection/:name
+    order:
+      - udhr.md
+      - babel.md
