minor stylistic corrections

--- a/_data/lexicon.yaml
+++ b/_data/lexicon.yaml
@@ -1300,7 +1300,7 @@
   - is contagious
   - is radioactive
   key: k1.u1
-  plus: [dažŋģū, fish (or marine mammal)]
+  plus: [[dažŋģū, fish (or marine mammal)]]
   valence: 2
 - d: pa-
   en:
